--- a/analise_2.0/analise_financeira_part_2_C.ipynb
+++ b/analise_2.0/analise_financeira_part_2_C.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "3cd02e10",
    "metadata": {},
    "outputs": [],
@@ -16,18 +16,18 @@
    "id": "f196921d",
    "metadata": {},
    "source": [
-    "# 1. Carregar a base original (Morumbi)"
+    "# 1. Carregar a base original (Chácara)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "5aad084e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Carrega o arquivo de entrada (arquivo organizado em `filling_Ceps/`)\n",
-    "df = pd.read_csv('../filling_Ceps/Elvira Brandão Morumbi - Euvira Brandão Dados ADS_coords_corrigidas_com_enderecos.csv')"
+    "df = pd.read_csv('../filling_Ceps/Elvira - Chacara - INEP 35107700 Dados ADS_coords_corrigidas_com_enderecos.csv')"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "8e64b3f8",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "36ed3bbc",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "d9333359",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "a2577669",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "41f5feb3",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "c05e11c3",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "38341c73",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "c5071a14",
    "metadata": {},
    "outputs": [
@@ -211,38 +211,38 @@
      "output_type": "stream",
      "text": [
       "           CEP                 Bairro  renda_mediana_2025  \\\n",
-      "82   04753-060            Santo Amaro        22636.359900   \n",
-      "72   04727-002            Santo Amaro        18074.722050   \n",
-      "63   04719-050         Granja Julieta        26215.791525   \n",
-      "55   04717-004  Chácara Santo Antônio        16986.642750   \n",
-      "84   04755-070            Santo Amaro        16676.213400   \n",
-      "272  05708-290           Vila Andrade        25081.824075   \n",
-      "35   04708-001      Jardim Petrópolis        17478.776700   \n",
-      "8    04567-110          Brooklin Novo        32052.220200   \n",
-      "74   04730-990         Granja Julieta        18504.491775   \n",
-      "43   04711-130          Brooklin Novo        28064.819475   \n",
-      "42   04710-190  Chácara Santo Antônio        18047.706600   \n",
-      "295  05749-260           Vila Andrade        13511.270850   \n",
-      "287  05727-160           Paraisópolis        15878.327850   \n",
-      "85   04757-000            Santo Amaro        14798.737800   \n",
-      "286  05726-130           Paraisópolis        19375.633200   \n",
+      "171  04727-002            Santo Amaro        18074.722050   \n",
+      "100  04662-901     Jardim Santo Amaro        34613.374950   \n",
+      "162  04719-050         Granja Julieta        26215.791525   \n",
+      "154  04717-004  Chácara Santo Antônio        16986.642750   \n",
+      "117  04696-000           Campo Grande        20353.560150   \n",
+      "206  04755-070            Santo Amaro        16676.213400   \n",
+      "274  05708-290           Vila Andrade        25081.824075   \n",
+      "132  04708-001      Jardim Petrópolis        17478.776700   \n",
+      "21   04566-001          Brooklin Novo        34482.871500   \n",
+      "28   04567-110          Brooklin Novo        32052.220200   \n",
+      "173  04730-990         Granja Julieta        18504.491775   \n",
+      "197  04750-000            Santo Amaro        13013.708400   \n",
+      "81   04625-022         Brooklin Velho        22908.183375   \n",
+      "141  04711-130          Brooklin Novo        28064.819475   \n",
+      "212  04766-000                Socorro         6133.084650   \n",
       "\n",
       "     mediana_criancas_0_9  populacao_mediana  score_trafego_2025  \n",
-      "82                  131.0              671.0        2.965363e+06  \n",
-      "72                  117.0              644.0        2.114742e+06  \n",
-      "63                   73.5              558.5        1.926861e+06  \n",
-      "55                  108.0              680.0        1.834557e+06  \n",
-      "84                   92.0              554.0        1.534212e+06  \n",
-      "272                  54.0              462.5        1.354419e+06  \n",
-      "35                   77.0              678.0        1.345866e+06  \n",
-      "8                    39.5              250.5        1.266063e+06  \n",
-      "74                   64.5              434.0        1.193540e+06  \n",
-      "43                   40.0              370.5        1.122593e+06  \n",
-      "42                   53.0              302.0        9.565284e+05  \n",
-      "295                  69.5              582.5        9.390333e+05  \n",
-      "287                  58.0              383.0        9.209430e+05  \n",
-      "85                   62.0              511.0        9.175217e+05  \n",
-      "286                  47.0              432.0        9.106548e+05  \n"
+      "171                 117.0              644.0        2.114742e+06  \n",
+      "100                  60.0              546.0        2.076802e+06  \n",
+      "162                  73.5              558.5        1.926861e+06  \n",
+      "154                 108.0              680.0        1.834557e+06  \n",
+      "117                  79.0              713.5        1.607931e+06  \n",
+      "206                  92.0              554.0        1.534212e+06  \n",
+      "274                  54.0              462.5        1.354419e+06  \n",
+      "132                  77.0              678.0        1.345866e+06  \n",
+      "21                   38.0              372.0        1.310349e+06  \n",
+      "28                   39.5              250.5        1.266063e+06  \n",
+      "173                  64.5              434.0        1.193540e+06  \n",
+      "197                  88.0              586.0        1.145206e+06  \n",
+      "81                   49.5              277.5        1.133955e+06  \n",
+      "141                  40.0              370.5        1.122593e+06  \n",
+      "212                 177.0             1835.0        1.085556e+06  \n"
      ]
     }
    ],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "95874973",
    "metadata": {},
    "outputs": [],
@@ -266,18 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "id": "9334990a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Salvar resultado agregado na pasta do notebook (comportamento original)\n",
-    "top_ceps.to_csv(\"ElviraBrandao_Morumbi_top_ceps_2025.csv\", index=False)"
+    "top_ceps.to_csv(\"ElviraBrandao_Chacara_top_ceps_2025.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "d2a94fb9",
    "metadata": {},
    "outputs": [
@@ -312,49 +312,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>272</th>\n",
-       "      <td>05708-290</td>\n",
-       "      <td>Vila Andrade</td>\n",
-       "      <td>25081.82</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>462.5</td>\n",
-       "      <td>1354418.50</td>\n",
+       "      <th>171</th>\n",
+       "      <td>04727-002</td>\n",
+       "      <td>Santo Amaro</td>\n",
+       "      <td>18074.72</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>644.0</td>\n",
+       "      <td>2114742.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>05749-260</td>\n",
-       "      <td>Vila Andrade</td>\n",
-       "      <td>13511.27</td>\n",
-       "      <td>69.5</td>\n",
-       "      <td>582.5</td>\n",
-       "      <td>939033.32</td>\n",
+       "      <th>100</th>\n",
+       "      <td>04662-901</td>\n",
+       "      <td>Jardim Santo Amaro</td>\n",
+       "      <td>34613.37</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>546.0</td>\n",
+       "      <td>2076802.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>287</th>\n",
-       "      <td>05727-160</td>\n",
-       "      <td>Paraisópolis</td>\n",
-       "      <td>15878.33</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>383.0</td>\n",
-       "      <td>920943.02</td>\n",
+       "      <th>162</th>\n",
+       "      <td>04719-050</td>\n",
+       "      <td>Granja Julieta</td>\n",
+       "      <td>26215.79</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>558.5</td>\n",
+       "      <td>1926860.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>05726-130</td>\n",
-       "      <td>Paraisópolis</td>\n",
-       "      <td>19375.63</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>432.0</td>\n",
-       "      <td>910654.76</td>\n",
+       "      <th>154</th>\n",
+       "      <td>04717-004</td>\n",
+       "      <td>Chácara Santo Antônio</td>\n",
+       "      <td>16986.64</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>680.0</td>\n",
+       "      <td>1834557.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>271</th>\n",
-       "      <td>05707-400</td>\n",
-       "      <td>Vila Andrade</td>\n",
-       "      <td>33537.00</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>267.0</td>\n",
-       "      <td>771350.90</td>\n",
+       "      <th>206</th>\n",
+       "      <td>04755-070</td>\n",
+       "      <td>Santo Amaro</td>\n",
+       "      <td>16676.21</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>554.0</td>\n",
+       "      <td>1534211.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -366,93 +366,93 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>05625-160</td>\n",
-       "      <td>Vila Sônia</td>\n",
-       "      <td>8387.46</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>92262.06</td>\n",
+       "      <th>148</th>\n",
+       "      <td>04715-002</td>\n",
+       "      <td>Santo Amaro</td>\n",
+       "      <td>6783.77</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>57662.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>05525-050</td>\n",
-       "      <td>Ferreira</td>\n",
-       "      <td>4793.27</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>288.0</td>\n",
-       "      <td>91072.19</td>\n",
+       "      <th>200</th>\n",
+       "      <td>04751-000</td>\n",
+       "      <td>Jardim Santo Amaro</td>\n",
+       "      <td>7331.07</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>40320.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>05520-100</td>\n",
-       "      <td>Vila Sônia</td>\n",
-       "      <td>3783.21</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>238.0</td>\n",
-       "      <td>71881.07</td>\n",
+       "      <th>168</th>\n",
+       "      <td>04726-170</td>\n",
+       "      <td>Chácara Santo Antônio</td>\n",
+       "      <td>12216.54</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>264.0</td>\n",
+       "      <td>30541.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>05521-000</td>\n",
-       "      <td>Vila Sônia</td>\n",
-       "      <td>5049.91</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>248.0</td>\n",
-       "      <td>55549.06</td>\n",
+       "      <th>146</th>\n",
+       "      <td>04714-002</td>\n",
+       "      <td>Chácara Santo Antônio</td>\n",
+       "      <td>4573.41</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>18293.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>346</th>\n",
-       "      <td>06753-030</td>\n",
-       "      <td>Ferreira</td>\n",
-       "      <td>1521.52</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>13693.65</td>\n",
+       "      <th>217</th>\n",
+       "      <td>04794-000</td>\n",
+       "      <td>Chácara Santo Antônio</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>94 rows × 6 columns</p>\n",
+       "<p>104 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           CEP        Bairro  renda_mediana_2025  mediana_criancas_0_9  \\\n",
-       "272  05708-290  Vila Andrade            25081.82                  54.0   \n",
-       "295  05749-260  Vila Andrade            13511.27                  69.5   \n",
-       "287  05727-160  Paraisópolis            15878.33                  58.0   \n",
-       "286  05726-130  Paraisópolis            19375.63                  47.0   \n",
-       "271  05707-400  Vila Andrade            33537.00                  23.0   \n",
-       "..         ...           ...                 ...                   ...   \n",
-       "228  05625-160    Vila Sônia             8387.46                  11.0   \n",
-       "123  05525-050      Ferreira             4793.27                  19.0   \n",
-       "114  05520-100    Vila Sônia             3783.21                  19.0   \n",
-       "118  05521-000    Vila Sônia             5049.91                  11.0   \n",
-       "346  06753-030      Ferreira             1521.52                   9.0   \n",
+       "           CEP                 Bairro  renda_mediana_2025  \\\n",
+       "171  04727-002            Santo Amaro            18074.72   \n",
+       "100  04662-901     Jardim Santo Amaro            34613.37   \n",
+       "162  04719-050         Granja Julieta            26215.79   \n",
+       "154  04717-004  Chácara Santo Antônio            16986.64   \n",
+       "206  04755-070            Santo Amaro            16676.21   \n",
+       "..         ...                    ...                 ...   \n",
+       "148  04715-002            Santo Amaro             6783.77   \n",
+       "200  04751-000     Jardim Santo Amaro             7331.07   \n",
+       "168  04726-170  Chácara Santo Antônio            12216.54   \n",
+       "146  04714-002  Chácara Santo Antônio             4573.41   \n",
+       "217  04794-000  Chácara Santo Antônio                 NaN   \n",
        "\n",
-       "     populacao_mediana  score_trafego_2025  \n",
-       "272              462.5          1354418.50  \n",
-       "295              582.5           939033.32  \n",
-       "287              383.0           920943.02  \n",
-       "286              432.0           910654.76  \n",
-       "271              267.0           771350.90  \n",
-       "..                 ...                 ...  \n",
-       "228              257.0            92262.06  \n",
-       "123              288.0            91072.19  \n",
-       "114              238.0            71881.07  \n",
-       "118              248.0            55549.06  \n",
-       "346               52.0            13693.65  \n",
+       "     mediana_criancas_0_9  populacao_mediana  score_trafego_2025  \n",
+       "171                 117.0              644.0          2114742.48  \n",
+       "100                  60.0              546.0          2076802.50  \n",
+       "162                  73.5              558.5          1926860.68  \n",
+       "154                 108.0              680.0          1834557.42  \n",
+       "206                  92.0              554.0          1534211.63  \n",
+       "..                    ...                ...                 ...  \n",
+       "148                   8.5              202.0            57662.06  \n",
+       "200                   5.5               96.0            40320.87  \n",
+       "168                   2.5              264.0            30541.35  \n",
+       "146                   4.0              104.0            18293.63  \n",
+       "217                   0.0                NaN                 NaN  \n",
        "\n",
-       "[94 rows x 6 columns]"
+       "[104 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lista dos bairros desejados\n",
-    "bairros_desejados = [\"Vila Sônia\", \"Ferreira\", \"Paraisópolis\", \"Jardim Maria Duarte\", \"Vila Andrade\"]\n",
+    "bairros_desejados = [\"Granja Julieta\", \"Chácara Santo Antônio\", \"Santo Amaro\", \"Chácara Flora\", \"Jardim Santo Amaro\", \"Vila Andrade\"]\n",
     "\n",
     "# Filtrar diretamente no top_ceps\n",
     "top_ceps_filtrado = top_ceps[top_ceps[\"Bairro\"].isin(bairros_desejados)]\n",
@@ -462,12 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "e5eb763c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_ceps_filtrado.to_csv(\"ElviraBrandao_Morumbi_top_ceps_filtrados_2025.csv\", index=False)"
+    "top_ceps_filtrado.to_csv(\"ElviraBrandao_Chacara_ceps_filtrados_2025.csv\", index=False)"
    ]
   },
   {
